# agentbank

./: .env.example  .gitignore  DEMO_SCRIPT.md  LICENSE  README.kr.md  README.md  README.zh.md  config.py  deployments.json  foundry.toml  hardhat.config.js  orchestrator.py  package.json  requirements.txt
agents/: allocator_agent.py  analyst_agent.py  analyst_alt_llama.py  analyst_alt_qwen.py  base_agent.py  circuit_breaker_agent.py  executor_agent.py  guard_agent.py
audit/: scope.yaml
contracts/: AgentBankVault.sol  AgentIdentity.sol  SignalBoard.sol
core/: byreal_bridge.py  chain.py  decentral_inference.py  dex_adapter.py  identity.py  llm.py  llm_ensemble.py  llm_hasher.py  mev_protection.py  pyth_client.py  signal_bus.py  tee_attestation.py
deployments/: activity_round4.json  v2_mantle.json  v3_mantle.json
docs/: ARCHITECTURE_V3.md  DUNE_DASHBOARD.md  MECHANISM_DESIGN.md  RESEARCH_PAPER.md  SECURITY_AUDIT.md  TOKENOMICS.md  TVL_BOOTSTRAP.md
pwa-leaderboard/: next.config.js  package.json  tailwind.config.ts
scripts/: deploy_mainnet.js  deploy_testnet.js  deploy_v2_continue.js  deploy_v2_mainnet.js  deploy_v2_testnet.js  deploy_v2_wire.js  deploy_v3.js  deploy_v3_fixed.js  generate_activity_round2.js  generate_activity_round3.js  generate_mass_activity.js  generate_onchain_activity.js  generate_reputation.js  migrate_v1_to_v2.js  post_deploy_v3.js  seed_initial_state.js  verify_all.js  verify_contracts.js  verify_reasoning.js
sdk/python/: pyproject.toml
sdk/python/agentbank/: __init__.py  client.py
skills/: SKILL.md  package.json  pool_analysis.py  (+3 more)
(+172 files in other folders)
