[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbank-py"
version = "3.0.0"
description = "Python SDK for interacting with AgentBank V3 protocol contracts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AgentBank Contributors" },
]
keywords = ["agentbank", "defi", "web3", "vault", "intent", "attestation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "web3>=6.15.0",
    "eth-account>=0.11.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/agentbank/agentbank"
Documentation = "https://docs.agentbank.xyz/sdk/python"
Repository = "https://github.com/agentbank/agentbank"

[tool.hatch.build.targets.wheel]
packages = ["agentbank"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
